[gd_scene load_steps=6 format=3 uid="uid://bbfsj4aw40xif"]

[ext_resource type="Script" uid="uid://nhpqt8vgagb8" path="res://Scenes/player_row.gd" id="1_h5xoh"]
[ext_resource type="Theme" uid="uid://dehkb5i0pkd8y" path="res://Resources/new_theme.tres" id="1_je1ko"]
[ext_resource type="Texture2D" uid="uid://bdao7iawdljdh" path="res://Resources/Images/Icons/star_colored_black.png" id="2_cwuqo"]
[ext_resource type="Texture2D" uid="uid://dumqxf6dup1ps" path="res://Resources/Images/Icons/star_colored_half_y-b.png" id="3_da8v3"]
[ext_resource type="Texture2D" uid="uid://oiqo8d2hx063" path="res://Resources/Images/Icons/star_colored_gold.svg" id="4_hmdwy"]

[node name="_playerRow" type="Button"]
custom_minimum_size = Vector2(750, 50)
offset_right = 730.0
offset_bottom = 42.0
script = ExtResource("1_h5xoh")
star_empty = ExtResource("2_cwuqo")
star_half = ExtResource("3_da8v3")
star_full = ExtResource("4_hmdwy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -365.0
offset_top = -21.0
offset_right = 365.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="_playerLabel_name" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme = ExtResource("1_je1ko")
theme_type_variation = &"HeaderMedium"
clip_text = true
max_lines_visible = 1

[node name="starContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="icon_star1" type="TextureRect" parent="HBoxContainer/starContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_cwuqo")
expand_mode = 2
stretch_mode = 5

[node name="icon_star2" type="TextureRect" parent="HBoxContainer/starContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_cwuqo")
expand_mode = 2
stretch_mode = 5

[node name="icon_star3" type="TextureRect" parent="HBoxContainer/starContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_cwuqo")
expand_mode = 2
stretch_mode = 5

[node name="icon_star4" type="TextureRect" parent="HBoxContainer/starContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_cwuqo")
expand_mode = 2
stretch_mode = 5

[node name="icon_star5" type="TextureRect" parent="HBoxContainer/starContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_cwuqo")
expand_mode = 2
stretch_mode = 5
